--- a/SpringWebProject/src/main/webapp/resources/css/member/default.css
+++ b/SpringWebProject/src/main/webapp/resources/css/member/default.css
@@ -1,7 +1,9 @@
-@charset "EUC-KR";
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
-body { font-family: 'Nanum Gothic', sans-serif;}
+body {font-family: 'Nanum Gothic', sans-serif;}
+body { background-color: red}
 body, html, h1,h2,h3,h4,h5,h6, li,ol,ul,p,form,table, fieldset,legend { margin: 0;padding: 0;}
 ul { list-style: none }
 .errorMsg { font-size: 0.8em; color: red;}
 .memberHref { font-size: 0.8em; color: blue;}
+.inputTextForm {width: 100px;height: 50px;}
